Prepare for open source and add key improvements
Features:
- Implement render-time defaults for button_text field
  * Save null instead of hardcoded default to database
  * Apply widget-type-specific defaults at render time
  * Allow global default updates without database changes

- Add smart US phone number normalization
  * Auto-detect 10-digit US numbers (area code starts 2-9)
  * Automatically prepend country code "1" for US numbers
  * Support multiple formats: (315)908-1965, 315-908-1965, 3159081965
  * Convert all to E.164 format (+13159081965)

Bug Fixes:
- Fix access code retry mechanism
  * Clear cached access code from sessionStorage on 403 error
  * Allow users to re-enter correct code after failed attempt
  * Apply fix to all widget types (inbound web, outbound web, outbound phone)

Open Source Preparation:
- Remove private demo files from main branch
  * Files preserved in private-demos branch for internal use
  * Add private demo files to .gitignore
  * Keep generic widget-example.html as public template

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ public/widget-demo.html
 
 #mcp
 .mcp.json
+
+# private demo files (kept in private-demos branch)
+public/architoon-demo.html
+public/test-widget.html
